--- a/apps/logicaffeine_web/index.html
+++ b/apps/logicaffeine_web/index.html
@@ -29,6 +29,9 @@
     <link rel="canonical" href="https://logicaffeine.com/">
     <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
 
+    <!-- Consolidated stylesheet -->
+    <link rel="stylesheet" href="/assets/style.css">
+
     <!-- KaTeX for LaTeX rendering -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.9/dist/katex.min.js"></script>
