--- a/apps/logicaffeine_web/index.html
+++ b/apps/logicaffeine_web/index.html
@@ -20,6 +20,8 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@logicaffeine">
+    <meta name="twitter:creator" content="@logicaffeine">
     <meta name="twitter:url" content="https://logicaffeine.com/">
     <meta name="twitter:title" content="LOGICAFFEINE - Debug Your Thoughts">
     <meta name="twitter:description" content="Turn everyday English into rigorous First-Order Logic. Verify arguments, surface hidden assumptions, and build rule systems.">
