SEO and UX upgrades

--- a/apps/logicaffeine_web/index.html
+++ b/apps/logicaffeine_web/index.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LOGICAFFEINE - Debug Your Thoughts</title>
+    <title>LOGICAFFEINE | Debug Your Thoughts</title>
 
     <!-- Primary Meta Tags -->
-    <meta name="title" content="LOGICAFFEINE - Debug Your Thoughts">
-    <meta name="description" content="Turn everyday English into rigorous First-Order Logic. Verify arguments, surface hidden assumptions, and build rule systems that actually hold up.">
+    <meta name="title" content="LOGICAFFEINE | Debug Your Thoughts">
+    <meta name="description" content="Humanity's last programming language. Transform plain English into compiled Rust code with Z3-powered verification. Debug your thoughts with mathematical certainty.">
     <meta name="keywords" content="logic, first-order logic, FOL, formal logic, reasoning, English to logic, transpiler, formal methods">
     <meta name="author" content="LOGICAFFEINE">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://logicaffeine.com/">
-    <meta property="og:title" content="LOGICAFFEINE - Debug Your Thoughts">
-    <meta property="og:description" content="Turn everyday English into rigorous First-Order Logic. Verify arguments, surface hidden assumptions, and build rule systems.">
-    <meta property="og:image" content="https://logicaffeine.com/og-image.png">
+    <meta property="og:title" content="LOGICAFFEINE | Debug Your Thoughts">
+    <meta property="og:description" content="Humanity's last programming language. Transform plain English into compiled Rust code with Z3-powered verification. Debug your thoughts with mathematical certainty.">
+    <meta property="og:image" content="https://logicaffeine.com/assets/OG-photo.png">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@logicaffeine">
     <meta name="twitter:creator" content="@logicaffeine">
     <meta name="twitter:url" content="https://logicaffeine.com/">
-    <meta name="twitter:title" content="LOGICAFFEINE - Debug Your Thoughts">
-    <meta name="twitter:description" content="Turn everyday English into rigorous First-Order Logic. Verify arguments, surface hidden assumptions, and build rule systems.">
-    <meta name="twitter:image" content="https://logicaffeine.com/og-image.png">
+    <meta name="twitter:title" content="LOGICAFFEINE | Debug Your Thoughts">
+    <meta name="twitter:description" content="Humanity's last programming language. Transform plain English into compiled Rust code with Z3-powered verification. Debug your thoughts with mathematical certainty.">
+    <meta name="twitter:image" content="https://logicaffeine.com/assets/OG-photo.png">
 
     <!-- Canonical & Favicon -->
     <link rel="canonical" href="https://logicaffeine.com/">
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+    <link rel="icon" type="image/jpeg" href="/site-icon.jpg">
 
     <!-- Consolidated stylesheet -->
     <link rel="stylesheet" href="/assets/style.css">
